gcc/testsuite/rust/rustc/ui/parser/use-ends-with-mod-sep.rs
use std::any::; // { dg-error "" "" { target *-*-* } }

